--- a/src-theme/semantic-ui/template/ui/field/select.html
+++ b/src-theme/semantic-ui/template/ui/field/select.html
@@ -52,7 +52,7 @@
          #el_text
          (click)="this.field.onValueTextClick(this.$event)"
          {class.default}="this.focused && this.searchQuery == ''"
-         {show}="!this.searchQuery && this.field.isMultiSelection() && 
+         {show}="!this.searchQuery && !this.field.isMultiSelection() && 
                     this.field.hasSelection()"
          {show.$save-state}="this.selectedShown"
          {show.$display}="inline-block"
