--- a/src-theme/semantic-ui/template/ui/field/select.html
+++ b/src-theme/semantic-ui/template/ui/field/select.html
@@ -57,7 +57,7 @@
                     this.field.hasSelection()"
          {show.$save-state}="this.selectedShown"
          {show.$display}="inline-block"
-         {bind}="this.field.getSelectedName()"></div>
+         {bind-html}="this.field.getSelectedName() || '&nbsp;'"></div>
 
     <!-- replaces two previous text blocks with invisible placeholder -->
     <div style="display: none"
@@ -72,7 +72,6 @@
             {show.$display}="block" 
             {options}="this.field._getSelectOptions()"></select>
 
-    
      <div class="menu transition" ##menu_items>
           <div class="disabled item"
                ##menu_disabled
