--- a/dev-test/templates/container1.html
+++ b/dev-test/templates/container1.html
@@ -1,8 +1,8 @@
 <div class="toolbar" ##toolbar>Toolbar here</div>
-<div class="body" ##body>
-    This is the body
-    <div class="items" ##items>
-        Items go here
+<div class="body">
+    This is a body wrapper
+    <div class="items" ##body>
+        This is the body
     </div>
 </div>
 <div class="fbar" ##footer>Footer here</div>
