Container: reference comment

--- a/src-theme/semantic-ui/template/ui/field/input.html
+++ b/src-theme/semantic-ui/template/ui/field/input.html
@@ -1,5 +1,7 @@
-<div class="ui input">
+<div class="ui input" ##body>
+    <!--##before-->
     <input  ##input
             [type]="this.field.$cfg.type" 
             [placeholder]="this.field.$cfg.placeholder">
+    <!--##after-->
 </div>
