--- a/src-theme/semantic-ui/template/ui/field/input.html
+++ b/src-theme/semantic-ui/template/ui/field/input.html
@@ -1,7 +1,7 @@
 <div class="ui input" ##body>
     <!--##before-->
     <input  ##input
-            [type]="this.field.$cfg.type" 
-            [placeholder]="this.field.$cfg.placeholder">
+            [type]="this.$cfg.type" 
+            [placeholder]="this.$cfg.placeholder">
     <!--##after-->
 </div>
