Menu, Item, Divider

--- a/src-theme/semantic-ui/template/ui/menu/item.html
+++ b/src-theme/semantic-ui/template/ui/menu/item.html
@@ -1,5 +1,5 @@
 <a class="item" 
-    (click)="this.onClick(this.$event)">
+    (click)="this.item.onClick(this.$event)">
     <!--##before-->
     <span ##text class="text" {bind}="this.$cfg.text"></span>
     <!--##after-->
