Menu child items wrapping

--- a/src-theme/semantic-ui/template/ui/menu/item.html
+++ b/src-theme/semantic-ui/template/ui/menu/item.html
@@ -1,6 +1,6 @@
 <a class="item" 
     (click)="this.item.onClick(this.$event)">
     <!--##before-->
-    <span ##text class="text" {bind}="this.$cfg.text"></span>
+    <span ##text {bind}="this.$cfg.text"></span>
     <!--##after-->
 </a>
