Dropdown menu; submenu

--- a/src-theme/semantic-ui/template/ui/menu/item-with-sub.html
+++ b/src-theme/semantic-ui/template/ui/menu/item-with-sub.html
@@ -1,7 +1,6 @@
-<a class="item" 
-    (click)="this.item.onClick(this.$event)">
+<div class="ui dropdown item">
     <!--##before-->
     {{ this.$cfg.text }}
     <!--##body-->
     <!--##after-->
-</a>
+</div>
