WithActionState, WithText, WithDropdown mixins

--- a/src-theme/semantic-ui/template/ui/button/button.html
+++ b/src-theme/semantic-ui/template/ui/button/button.html
@@ -1,8 +1,9 @@
 <button ##button 
         ##body
         class="ui button" 
+        {class.dropdown}="this.button.hasDropdown()"
         (click)="this.button.onClick(this.$event)">
     <!--##before-->
-    {{ this.$cfg.text }}
+    <span {bind}="this.$cfg.text"></span>
     <!--##after-->
 </button>
