--- a/src-theme/semantic-ui/template/ui/menu/container.html
+++ b/src-theme/semantic-ui/template/ui/menu/container.html
@@ -1,1 +1,7 @@
-<div class="item"></div>
+<div class="ui item" 
+        {class.active}="this.$cfg.active" 
+        {class.dropdown}="this.item.hasDropdown()">
+    <!--##before-->
+    <!--##body-->
+    <!--##after-->
+</div>
