Adjusting to latest rewrites

--- a/src-theme/semantic-ui/template/ui/button/button.html
+++ b/src-theme/semantic-ui/template/ui/button/button.html
@@ -1,4 +1,5 @@
-<apply-to-root ##button 
+<a  ##main
+    ##button 
     ##body
     class="ui button" 
     {class.active}="this.$cfg.active"
@@ -6,7 +7,8 @@
     {class.disabled}="this.$cfg.disabled"
     {class.dropdown}="this.button.hasDropdown()"
     (click)="this.button.onClick(this.$event)"
-    (click.$if)="!this.$cfg.disabled && !this.$cfg.loading"></apply-to-root>
+    (click.$if)="!this.$cfg.disabled && !this.$cfg.loading">
 <!--##before-->
 <span {bind}="this.$cfg.text"></span>
 <!--##after-->
+</a>
