--- a/src-theme/semantic-ui/template/ui/field/checkbox.html
+++ b/src-theme/semantic-ui/template/ui/field/checkbox.html
@@ -1,4 +1,4 @@
-<div class="ui checkbox" 
+<div ##main class="ui checkbox" 
     {class.active}="this.$cfg.active">
     <input type="checkbox" 
             [name]="this.$cfg.name" 
