--- a/src-theme/semantic-ui/template/ui/field/input.html
+++ b/src-theme/semantic-ui/template/ui/field/input.html
@@ -1,4 +1,4 @@
-<div class="ui input" ##body>
+<div class="ui input" ##main ##body>
     <!--##before-->
     <input  ##input
             [type]="this.$cfg.type" 
