--- a/src-theme/semantic-ui/template/ui/field/select.html
+++ b/src-theme/semantic-ui/template/ui/field/select.html
@@ -1,5 +1,6 @@
 <!--{includes: true}-->
-<div class="ui dropdown selection"
+<div ##main
+     class="ui dropdown selection"
      (click)="this.$view.onSelfClick(this.$event)"
      {init}="this.emptyShown = false; this.selectedShown = false;"
      {class.loading}="this.loading"
