--- a/src-theme/semantic-ui/template/ui/menu/item-with-sub.html
+++ b/src-theme/semantic-ui/template/ui/menu/item-with-sub.html
@@ -1,4 +1,4 @@
-<div class="ui item" 
+<div ##main class="ui item" 
         {class.active}="this.$cfg.active" 
         {class.dropdown}="this.item.hasDropdown()">
     <!--##before-->
