--- a/src-theme/semantic-ui/template/ui/menu/item.html
+++ b/src-theme/semantic-ui/template/ui/menu/item.html
@@ -1,4 +1,4 @@
-<a class="item" 
+<a ##main class="item" 
     {class.active}="this.$cfg.active"
     (click)="this.item.onClick(this.$event)">
     <!--##before-->
