--- a/src-theme/semantic-ui/template/ui/menu/container.html
+++ b/src-theme/semantic-ui/template/ui/menu/container.html
@@ -1,4 +1,5 @@
-<div class="ui item" 
+<div ##main 
+        class="ui item" 
         {class.active}="this.$cfg.active" 
         {class.dropdown}="this.item.hasDropdown()">
     <!--##before-->
