--- a/src-theme/semantic-ui/template/ui/util/canvas.html
+++ b/src-theme/semantic-ui/template/ui/util/canvas.html
@@ -2,8 +2,4 @@
     [width]="this.$cfg.width"
     [height]="this.$cfg.height"
     {style.width}="this.$cfg.width + 'px'"
-    {style.height}="this.$cfg.height + 'px'"
-    {style.cursor}="this.$cfg.cursor"
-    (mousedown)="this.cnv.onMouseDown(this.$event)"
-    (mousemove)="this.cnv.onMouseMove(this.$event)"
-    (mouseup)="this.cnv.onMouseUp(this.$event)"></canvas>
+    {style.height}="this.$cfg.height + 'px'"></canvas>
