--- a/src-theme/semantic-ui/template/ui/field/select.html
+++ b/src-theme/semantic-ui/template/ui/field/select.html
@@ -1,4 +1,3 @@
-<!--{includes: true}-->
 <div ##main
      class="ui dropdown selection"
      (click)="this.$view.onSelfClick(this.$event)"
@@ -62,6 +61,10 @@
          {show.$on--change}="this.selectedShown = this.$1"
          {show.$display}="inline-block"
          {bind-html}="this.field.getSelectedName() || '&nbsp;'"></div>
+
+     <i class="delete icon" ##icon_delete
+         {if}="!this.field.isMultiSelection() && this.field.hasSelection()"
+         (click)="this.$view.onItemDeleteClick(this.field.getSelection(0), this.$event)"></i>
 
     <!-- replaces two previous text blocks with invisible placeholder -->
     <div style="display: none"
