--- a/src-theme/semantic-ui/template/ui/field/select.html
+++ b/src-theme/semantic-ui/template/ui/field/select.html
@@ -96,6 +96,7 @@
                {each}="item in this.field.store"
                (click)="this.$parent.$view.onItemClick(this.item, this.$event)"
                {bind}="this.$parent.field.getItemName(this.item)"></a>
+          <!--##pagination-->
      </div>
 
      <!--##after-->
