touch events in Color

--- a/src-theme/semantic-ui/template/ui/util/color.html
+++ b/src-theme/semantic-ui/template/ui/util/color.html
@@ -7,6 +7,5 @@
     <canvas ##canvas
         {style.width}="this.$cfg.width + 'px'"
         {style.height}="this.$cfg.height + 'px'"
-        {style.cursor}="this.$cfg.cursor"
-        (mousedown)="this.cnv.onMouseDown(this.$event)"></canvas>
+        {style.cursor}="this.$cfg.cursor"></canvas>
 </div>
