--- a/src-theme/semantic-ui/template/ui/field/select.html
+++ b/src-theme/semantic-ui/template/ui/field/select.html
@@ -6,6 +6,7 @@
      {class.active}="this.opened"
      {class.disabled}="this.$cfg.disabled"
      {class.search}="this.$cfg.searchable"
+     {class.fluid}="this.$cfg.fluid"
      {class.multiple}="this.field.isMultiSelection()">
 
      <!--##before-->
