--- a/src-theme/semantic-ui/template/ui/button/button-plain.html
+++ b/src-theme/semantic-ui/template/ui/button/button-plain.html
@@ -1,5 +1,7 @@
-<a ##main>
+<a ##main
+    [disabled]="this.$cfg.disabled">
     <!--##before-->
+    <!--##icon-->
     <span {bind}="this.$cfg.text"></span>
     <!--##after-->
 </a>
